--- a/client/layouts/mainLayout.html
+++ b/client/layouts/mainLayout.html
@@ -36,19 +36,16 @@
           </div>
           <button type="submit" class="btn btn-default">Submit</button>
         </form>
+        {{#if currentUser}}
         <ul class="nav navbar-nav navbar-right">
           <li>{{> loginButtons}}</li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-            </ul>
-          </li>
         </ul>
+        {{else}}
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="/login">Login</a></li>
+          <li><a href="/register">Register</a></li>
+        </ul>
+        {{/if}}
       </div>
       <!-- /.navbar-collapse -->
     </div>
