--- a/client/layouts/mainLayout.html
+++ b/client/layouts/mainLayout.html
@@ -21,7 +21,6 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
               <li><a href="#">Something else here</a></li>
               <li role="separator" class="divider"></li>
               <li><a href="#">Separated link</a></li>
@@ -39,6 +38,8 @@
         {{#if currentUser}}
         <ul class="nav navbar-nav navbar-right">
           <li>{{> loginButtons}}</li>
+          <li><a href="/carts"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a></li>
+          <li><a href="/favorites"><span class="glyphicon glyphicon-heart"></span></a></li>
         </ul>
         {{else}}
         <ul class="nav navbar-nav navbar-right">
