--- a/client/layouts/mainLayout.html
+++ b/client/layouts/mainLayout.html
@@ -15,7 +15,7 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="slide-navbar-collapse">
         <ul class="nav navbar-nav">
-          <li><a href="/products">Productos</a></li>
+          <li class="hide-menu"><a href="/products">Productos</a></li>
           <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -38,8 +38,8 @@
         {{#if currentUser}}
         <ul class="nav navbar-nav navbar-right">
           <li>{{> loginButtons}}</li>
-          <li><a href="/carts"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a></li>
-          <li><a href="/favorites"><span class="glyphicon glyphicon-heart"></span></a></li>
+          <li class="hide-menu"><a href="/carts"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a></li>
+          <li class="hide-menu"><a href="/favorites"><span class="glyphicon glyphicon-heart"></span></a></li>
         </ul>
         {{else}}
         <ul class="nav navbar-nav navbar-right">
